<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chargingtest.MainActivity"
    tools:ignore="MergeRootFrame"
    android:paddingLeft="30dp"
    android:paddingTop="30dp"
    android:orientation="vertical" >
    <TextView 
        android:id="@+id/charging_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charging_status"
        />
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/charging_range" 
	        />
	    <EditText
	        android:id="@+id/the_min_percent"
	        android:layout_width="60dp"
	        android:layout_height="50dp"
	        android:text="@string/min_number"
	        android:numeric="integer"
	        />
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/percent"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/symbol"
	        />
	    <EditText
	        android:id="@+id/the_max_percent"
	        android:layout_width="60dp"
	        android:layout_height="50dp"
	        android:text="@string/max_number"
	        android:numeric="integer"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/percent"
	        />
    </LinearLayout>
    
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/charging_counts" 
	        />
	    <EditText
	        android:id="@+id/charging_times_counts"
	        android:layout_width="60dp"
	        android:layout_height="50dp"
	        android:text="@string/min_number"
	        android:numeric="integer"
	        />
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/counts"
	        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_electricity"
        />
    <TextView 
        android:id="@+id/now_charging_percent"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/data_filling"
	    />
    </LinearLayout>
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/charging_times"
	        />
	    <TextView 
	        android:id="@+id/now_charging_times"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/data_filling"
		    />
    </LinearLayout>
   
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        >
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/test_result"
	        android:textSize="30sp"
	        />
	     <TextView 
	        android:id="@+id/test_result"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/data_filling"
	        />
    </LinearLayout>
    
     <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        >
	  <Button 
	      android:id="@+id/start"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:text="@string/charging_start"
	      />
	  <Button 
	      android:id="@+id/stop"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_marginLeft="100dp"
	      android:text="@string/charging_stop"
	      />
    </LinearLayout>
 </LinearLayout>
